--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     }],
     "require": {
         "php": "^5.3 | ^7.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "vlucas/phpdotenv": "^2.3"
     },
     "autoload": {
         "psr-4": {
