--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     }],
     "require": {
         "php": "^5.3 | ^7.0",
-        "guzzlehttp/guzzle": "~6.0",
-        "vlucas/phpdotenv": "^2.3"
+        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +24,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
-        "phpspec/phpspec": "~2.0"
+        "phpspec/phpspec": "~2.0",
+        "vlucas/phpdotenv": "^2.3"
     },
     "autoload-dev": {
         "psr-4": {
