--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "phpspec/phpspec": "~2.0",
-        "vlucas/phpdotenv": "^2.3"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload-dev": {
         "psr-4": {
